# story-teller

./: Cargo.toml  Dioxus.toml  README.md  _config.yml  package-lock.json  package.json
.github/: 404.html
.github/workflows/: build-and-test.yml
src/: app.rs  main.css  main.rs
src/components/: banner.rs  check_box.rs  checkbox.rs  checkbox_dropdown.rs  checkbox_list.rs  filter.rs  mod.rs  navigation_bar.rs  search_bar.rs  story.rs  story_card.rs
src/components/account/: account_card.rs  auth_card.rs  mod.rs  profile.rs  profile_detail.rs  state_show.rs
src/components/anim/: ellipsis_loading.rs  mod.rs
src/components/content/: article.rs  article_author.rs  markdown.rs  mod.rs  new_story.rs
src/components/shared/: account_visibility.rs  auth_visibility.rs  banner_visibility.rs  metadata_visibility.rs  mod.rs
src/model/: local_storage.rs  mod.rs  session_storage.rs
src/nostr/: mod.rs  nip07.js  nip07.rs  nip19.rs  nostr_client.rs
src/pages/: article_page.rs  error_page.rs  home_page.rs  mod.rs  profile_page.rs  router.rs
src/styles/: account_card_style.rs  article_author_style.rs  article_layout_style.rs  article_style.rs  auth_card_style.rs  banner_style.rs  checkbox_list_style.rs  checkbox_style.rs  ellipsis_loading_style.rs  error_style.rs  filter_style.rs  grid_style.rs  markdown_style.rs  mod.rs  new_story_style.rs  profile_style.rs  screen_config.rs  search_bar_style.rs  story_style.rs
