[package]
name = "story-teller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.6", features = ["web"] }

# Debug
dioxus-logger = "0.5.1"
manganis = "0.2.2"
nostr-sdk = "0.35.0"

wasm-bindgen-futures = "0.4.43"
web-sys = "0.3.70"
js-sys = "0.3.70"
serde = "1.0.210"


