[package]
name = "story-teller"
version = "0.1.0"
description = "nostr client"
authors = ["rushmi0"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["router", "web"] }

# Debug
dioxus-logger = "0.5.1"
manganis = "0.2.2"
nostr-sdk = "0.35.0"
web-sys = { version = "0.3.70", features = ["HtmlImageElement", "SpeechSynthesis", "Navigator"] }
js-sys = "0.3.70"
serde = "1.0.210"
serde_json = "1.0.127"
chrono = "0.4.38"
futures = "0.3.30"
reqwest = "0.12.8"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
pulldown-cmark = "0.12.2"
tts = "0.26.3"
regex = "1.11.0"
